Fixed horizontal scroller padding

--- a/src/App.css
+++ b/src/App.css
@@ -215,25 +215,25 @@ a {
 }
 
 /* HORIZONTAL SCROLLER / MEDIA SCROLLER */
+
 .media-scroller {
   scroll-snap-type: inline mandatory;
-  padding-top: 20px;
-  padding-left: 2rem;
-  padding-bottom: 80px;
+  scroll-padding-inline: 1rem;
+  padding: 1rem 1rem 5rem 2rem;
   display: flex;
   gap: 20px;
   overflow-x: auto;
   overflow-y: hidden;
   overscroll-behavior-inline: contain;
 }
+
 .media-scroller::-webkit-scrollbar {
   display: none;
 }
-
 .media-element {
   scroll-snap-align: start;
   aspect-ratio: 16 / 9;
 }
-
-.horizontal-scroller {
+.horizontal-scroller h1 {
+  margin-left: 1rem;
 }
